# an-dev-studio

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.mjs  vitest.config.ts
adr/: ADR-0001-initial-architecture.md
anu/: Modelfile  setup.ps1  setup.sh
anu/train/: finetune.py  training_data.jsonl
apps/studio/: .gitignore  README.md  next.config.ts  package.json  setup-desktop.ps1  vercel.json  vitest.config.ts  vitest.setup.ts
apps/studio/config/: projects.json
apps/studio/public/: llms.txt
apps/studio/src/: middleware.ts
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/launcher/: index.html
apps/studio/src-tauri/src/: main.rs  setup.rs
config/: .gitignore
docs/: architecture.md  audit.md  business-plan.md  pricing-launch.md  principles.md  roadmap.md  seo-geo.md  vision.md
docs/architecture/: 001-vision.md  002-system-architecture.md
legacy/kernel/: README.md
src/: index.ts  studio.ts  test-events.ts
src/agents/: bootstrap.ts
src/agents/core/: ArchitectAgent.ts  BaseAgent.ts  index.ts
src/agents/events/: AgentEventTypes.ts
src/agents/impl/: ArchitectAgent.ts
src/agents/orchestrator/: AdaptiveExecutiveGraph.ts  ExecutiveGraph.ts  Orchestrator.ts  SelfEvolvingExecutiveGraph.ts  SimplePlanner.ts  index.ts
src/agents/registry/: AgentRegistry.ts
src/agents/runtime/: AgentRuntime.ts
src/agents/types/: AgentTypes.ts
src/ai/autonomous/: AutonomousModuleTypes.ts
src/tests/: ModuleSystem.test.ts  ServiceContainer.test.ts  kernel.ts
(+271 files in other folders)
