[package]
name = "an-dev-studio"
version = "1.0.0"
description = "AN Dev Studio — desktop shell"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "an-dev-studio"
path = "src/main.rs"
